--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,21 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #0C365A;
+$secondary : #01D167;
+// $accent    : #9C27B0;
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+// $dark      : #1D1D1D;
+// $dark-page : #121212;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+// $positive  : #21BA45;
+// $negative  : #C10015;
+// $info      : #31CCEC;
+// $warning   : #F2C037;
+
+$secondary-text:#325BAF;
+
+//Background colors
+$bg-blue-300:#EDF3FF;
+$bg-blue-200:#009DFF1A;
+$bg-blue-100:#F5F9FF;
