ui + code challenge

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,4 +1,142 @@
 // app global css in SCSS form
 *{
   font-family: 'Open Sans', sans-serif;
+  padding: 0;
+}
+// app global css in SCSS form
+
+.small-screen-only {
+  @media (max-width: $breakpoint-xs-max) {
+    display: block;
+  }
+
+  @media (max-width: $breakpoint-sm-max) {
+    display: none;
+  }
+  @media (max-width: $breakpoint-md-min) {
+    display: none;
+  }
+  @media (max-width: 700px) {
+    display: block;
+  }
+  @media (min-width: 701px) {
+    display: none !important;
+  }
+}
+
+.small-screen-padding {
+  @media (max-width: 808px) {
+    padding: 0px !important;
+  }
+  @media (max-width: 999px) {
+    padding: 0px !important;
+  }
+  // @media (min-width: 1100px) {
+  //   width: 906px;
+  // }
+}
+
+.mobile__top-section {
+  @media (max-width: 600px) {
+    background-color: #0c365a;
+    width: 100%;
+    color: #fff;
+  }
+}
+
+
+.mobile__font-color {
+  @media (max-width: 600px) {
+    color: #fff !important;
+  }
+}
+.new__card-btn {
+  @media (max-width: 601px) {
+    display: none;
+  }
+}
+.new__card-link {
+  @media (min-width: 601px) {
+    display: none;
+  }
+}
+// .cards__tab--row, .carousel__section {
+//     @media (max-width:601px){
+//       padding: 12px;
+//             }
+// }
+
+.mobile-logo {
+  @media (min-width: 601px) {
+    display: none !important;
+  }
+}
+.mobile__font-size {
+  @media (max-width: 600px) {
+    font-size: 22px !important;
+  }
+}
+
+
+@media (max-width: 601px) {
+  .features__section {
+    border-bottom-left-radius: 0px !important;
+    border-bottom-right-radius: 0px !important;
+    margin-top:364px !important;
+    position: relative;
+    z-index:2;
+  }
+  
+  .carousel__section {
+    padding: 12px;
+    position: fixed;  
+    top: 104px;
+}
+.cards__tab--row{
+    padding: 12px;
+    position: fixed;  
+    top: 74px;
+    font-size: 12px !important;
+}
+
+.mobile-logo{
+    position: fixed;
+    // margin-top: 12px;
+    top: 2px;
+
+}
+  .view__card-number {
+    background-color: #fff !important;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+  .info__section {
+      padding: 12px;
+      position: fixed;
+      top: 12px;
+    }
+    .cards__tab--row{
+        position: fixed;
+        top: 74px;
+        margin-bottom: 14px;
+    }
+  .carousel__section{
+    //   position: fixed;
+    //   z-index: 0;
+  }
+
+  .accordian-header{
+      margin-top:16px;
+  }
+  .mobile__bottom-section {
+    background-color: #fff !important;
+    // position: fixed;
+    z-index: 2;
+    margin-left: 0 !important;
+    // margin-bottom: 28px;
+
+  }
+    .brand-col{
+       display: none !important;
+ }
 }
