--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -30,3 +30,6 @@ $secondary-text:#325BAF;
 $bg-blue-300:#EDF3FF;
 $bg-blue-200:#009DFF1A;
 $bg-blue-100:#F5F9FF;
+
+// Text-colors
+$text-black-300: #222222;
